# Autonomous_Vehicle_Control

./: README.md
AVC_Control_COM/: .gitignore  CMakeLists.txt  main.c
AVC_Control_COM/Control/: CMakeLists.txt
AVC_Control_COM/Control/DAQHal/include/: DAQHal.h
AVC_Control_COM/Control/DAQHal/lib/: DAQHal.lib  DAQHal_d.lib  NIDAQmx.lib
AVC_Control_COM/Control/include/: car_control.h  keyboard_input.h
AVC_Control_COM/Control/src/: car_control.c  keyboard_input.c
AVC_Control_COM/GPSINS/: CMakeLists.txt
AVC_Control_COM/GPSINS/include/: GPSINS.h
AVC_Control_COM/GPSINS/src/: GPSINS.c
AVC_Control_COM/Logger/: CMakeLists.txt
AVC_Control_COM/Logger/include/: logger.h
AVC_Control_COM/Logger/src/: logger.c
AVC_Control_COM/Path_Planning/: CMakeLists.txt
AVC_Control_COM/Path_Planning/Communication/include/: IP.h  socket.h
AVC_Control_COM/Path_Planning/Communication/lib/: communication.lib  communication_d.lib
AVC_Control_COM/Path_Planning/include/: global_path_planning.h  local_path_planning.h  path_planning.h  remote_recog_com.h
AVC_Control_COM/Path_Planning/src/: global_path_planning.c  local_path_planning.c  path_planning.c  remote_recog_com.c
AVC_Control_COM/Time/: CMakeLists.txt
AVC_Control_COM/Time/include/: idle_time.h
AVC_Control_COM/Time/src/: idle_time.c
AVC_Recognition_COM/: CMakeLists.txt  main.cpp
AVC_Recognition_COM/Camera/: CMakeLists.txt
AVC_Recognition_COM/Camera/YOLOv8/include/: Engine.cuh  YOLOv8.cuh
AVC_Recognition_COM/Camera/YOLOv8/lib/: Engine.lib  Engine_d.lib  YOLOv8.lib  YOLOv8_d.lib
AVC_Recognition_COM/Camera/include/: calibration.hpp
AVC_Recognition_COM/Camera/src/: calibration.cpp
AVC_Recognition_COM/Communication/include/: TCP.h  UDP.h  communication.h  serial.h
AVC_Recognition_COM/Communication/lib/: communication.lib  communication_d.lib
AVC_Recognition_COM/Data/Input/: MISSION.INP
AVC_Recognition_COM/LIDAR/: CMakeLists.txt
AVC_Recognition_COM/LIDAR/include/: LIDAR_processing.h
AVC_Recognition_COM/LIDAR/interface/: CMakeLists.txt
AVC_Recognition_COM/LIDAR/interface/include/: Function.h  SensorLidar.h
AVC_Recognition_COM/LIDAR/interface/src/: Function.c  SensorLidar.c
AVC_Recognition_COM/LIDAR/interface/urg/include/: open_urg_sensor.h  urg_debug.h  urg_sensor.h  urg_utils.h
AVC_Recognition_COM/LIDAR/interface/urg/src/: open_urg_sensor.c  urg_connection.c  urg_debug.c  urg_ring_buffer.c  urg_sensor.c  urg_serial.c  urg_serial_utils.c  urg_serial_windows.c  urg_tcpclient.c  urg_utils.c
AVC_Recognition_COM/LIDAR/src/: LIDAR_processing.c
AVC_Recognition_COM/OGM/: CMakeLists.txt
AVC_Recognition_COM/OGM/include/: OGM_processing.hpp  remote_control_com.h
AVC_Recognition_COM/OGM/src/: OGM_processing.cpp  remote_control_com.c
AVC_assign/: .gitignore  CMakeLists.txt
AVC_assign/MATLAB/HW1_GPSINS_CER/: LAB1_GPS_validation.m  data_240319_185420.mat  data_240319_190133.mat  data_240319_190831.mat  data_240319_192000.mat  geodetic2rect.m
AVC_assign/MATLAB/HW2_Navigation_Degine/: HW2_navigation_degine.m  compute_wnb.m  dcm.m  dcm2pos.m  navigation_degine.slx  skewness.m
AVC_assign/MATLAB/HW3_Complementary_Filter/: Height_Filter.m  complementary_filter.slx  filter_simulation.m  untitled.m
AVC_assign/MATLAB/HW4_Guidance/: guidance.slx  guidance_script.m
AVC_assign/MATLAB/HW5_Loacl_Guidance/: global_guidance.m  lidar_simul.m  main.m
AVC_assign/MATLAB/TU_weak4/: angle_rate_Nframe.m  compute_H.m  deriv_euler.m
AVC_assign/lib/DAQhal/: DAQhal.c  DAQhal.h
AVC_assign/modeling/: CMakeLists.txt  dynamic.c  static.c
